--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>jm.kirill</groupId>
-    <artifactId>Spring_MVC_CRUD</artifactId>
+    <artifactId>spring-mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <spring.version>5.2.9.RELEASE</spring.version>
+        <spring.version>5.2.0.RELEASE</spring.version>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>5.2.9.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <dependency>
@@ -54,6 +57,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.4.22.Final</version>
+        </dependency>
+
+        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.19</version>
@@ -70,7 +79,7 @@
                     <version>2.4</version>
                     <configuration>
                         <warSourceDirectory>src/webapp</warSourceDirectory>
-                        <warName>Spring_MVC_CRUD</warName>
+                        <warName>spring_mvc</warName>
                         <failOnMissingWebXml>false</failOnMissingWebXml>
                     </configuration>
                 </plugin>
@@ -86,7 +95,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>Spring_MVC_CRUD</finalName>
+        <finalName>Spring_MVC</finalName>
     </build>
-    
+
 </project>
